[DEV] Initial config and header component

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,15 @@
 /* You can add global styles to this file, and also import other style files */
+:root {
+    --Dark-Blue: hsl(209, 23%, 22%); // (Dark Mode Elements)
+    --Very-Dark-Blue: hsl(207, 26%, 17%); // (Dark Mode Background)
+    --Very-Dark-Blue: hsl(200, 15%, 8%); // (Light Mode Text)
+    --Dark-Gray: hsl(0, 0%, 52%); // (Light Mode Input)
+    --Very-Light-Gray: hsl(0, 0%, 98%); // (Light Mode Background)
+    --White: hsl(0, 0%, 100%); //(Dark Mode Text & Light Mode Elements)
+}
+
+body {
+    margin: 0;
+    padding: 0;
+    font-family: 'Nunito Sans', sans-serif;
+}
