--- a/src/styles.scss
+++ b/src/styles.scss
@@ -6,10 +6,15 @@
     --Dark-Gray: hsl(0, 0%, 52%); // (Light Mode Input)
     --Very-Light-Gray: hsl(0, 0%, 98%); // (Light Mode Background)
     --White: hsl(0, 0%, 100%); //(Dark Mode Text & Light Mode Elements)
+    --primary-font: 'Nunito Sans', sans-serif;
+}
+
+*, *::before, *::after {
+    box-sizing: border-box;
 }
 
 body {
     margin: 0;
     padding: 0;
-    font-family: 'Nunito Sans', sans-serif;
+    font-family: var(--primary-font);
 }
