--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,4 +5,17 @@
 
 <app-header></app-header>
 
-<app-search-input [inputPlaceholder]="'Search for a country...'" (sendSearchValue)="addItem($event)"></app-search-input>
+<router-outlet></router-outlet>
+<!-- <app-search-input [inputPlaceholder]="'Search for a country...'" (sendSearchValue)="searchCountry($event)"></app-search-input> -->
+
+<section class="main-content">
+    <div class="main-content__card">
+        <img src="" alt="" class="card__img">
+        <h2 class="card__title">Pais</h2>
+        <ul class="card__info-list">
+            <li class="info-list__item">Population:</li>
+            <li class="info-list__item">Region:</li>
+            <li class="info-list__item">Capital:</li>
+        </ul>
+    </div>
+</section>
