--- a/src/app/home/shared/header/header.component.html
+++ b/src/app/home/shared/header/header.component.html
@@ -3,14 +3,14 @@
       <h1 class="title__text">Where in the world?</h1>
     </section>
     <section class="header__dark-mode" (click)="changeDarkMode()">
-      <section class="dark-mode__icon" *ngIf="!darkMode">
-        <i class="fa-solid fa-moon"></i>
+      <section class="dark-mode__icon" *ngIf="!isDarkMode">
+        <em class="fa-solid fa-moon"></em>
       </section>
-      <section class="dark-mode__icon" *ngIf="darkMode">
-        <i class="fa-solid fa-sun"></i>
+      <section class="dark-mode__icon" *ngIf="isDarkMode">
+        <em class="fa-solid fa-sun"></em>
       </section>
       <section class="dark-mode__text">
-        <p>Dark Mode</p>
+        <p>{{isDarkMode ? 'Light Mode' : 'Dark Mode'}}</p>
       </section>
     </section>
   </header>
