--- a/src/app/home/shared/header/header.component.scss
+++ b/src/app/home/shared/header/header.component.scss
@@ -4,7 +4,9 @@
     justify-content: space-between;
     align-items: center;
     padding: 1rem;
-    box-shadow: 0px 0px 20px 0px rgba(0,0,0,0.50);
+    box-shadow: var(--card-box-shadow);
+    background: var(--card-background);
+    color: var(--font-color);
 }
 
 .header__title {
