--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,12 +1,16 @@
 /* You can add global styles to this file, and also import other style files */
 :root {
-    --Dark-Blue: hsl(209, 23%, 22%); // (Dark Mode Elements)
-    --Very-Dark-Blue: hsl(207, 26%, 17%); // (Dark Mode Background)
-    --Very-Dark-Blue: hsl(200, 15%, 8%); // (Light Mode Text)
-    --Dark-Gray: hsl(0, 0%, 52%); // (Light Mode Input)
-    --Very-Light-Gray: hsl(0, 0%, 98%); // (Light Mode Background)
-    --White: hsl(0, 0%, 100%); //(Dark Mode Text & Light Mode Elements)
+    --Dark-Blue: rgb(43, 57, 69); // (Dark Mode Elements)
+    --Very-Dark-Blue: rgb(32, 44, 55); // (Dark Mode Background)
+    --Very-Dark-Blue: rgb(17, 21, 23); // (Light Mode Text)
+    --Dark-Gray: rgb(133, 133, 133); // (Light Mode Input)
+    --Very-Light-Gray: rgb(250, 250, 250); // (Light Mode Background)
+    --White: rgb(255, 255, 255); //(Dark Mode Text & Light Mode Elements)
     --primary-font: 'Nunito Sans', sans-serif;
+    --card-background: rgba(255, 255, 255, 0.9);
+    --card-box-shadow: 0 5px 10px 0 rgba(86, 87, 92, 0.37);
+    --font-color: rgb(17, 21, 23);
+    --main-background: rgb(250, 250, 250);
 }
 
 *, *::before, *::after {
@@ -17,4 +21,5 @@ body {
     margin: 0;
     padding: 0;
     font-family: var(--primary-font);
+    background: var(--main-background);
 }
