[DEV] Add country border details buttons

--- a/src/app/home/pages/country-detail/country-detail.component.html
+++ b/src/app/home/pages/country-detail/country-detail.component.html
@@ -21,7 +21,7 @@
         <section class="detail__border-countries">
             <h3 class="border-countries__title">Border countries:</h3>
             <div class="border-countries__button-box">
-                <button *ngFor="let border of countryDetail.borders" class="button-box__button">{{ border }}</button>
+                <button *ngFor="let border of countryDetail.bordersBtn" class="button-box__button" (click)="onClickBorderButton(border)">{{ border.name }}</button>
             </div>
         </section>
     </section>
