--- a/src/app/home/pages/country-detail/country-detail.component.scss
+++ b/src/app/home/pages/country-detail/country-detail.component.scss
@@ -56,7 +56,9 @@
     display: flex;
     flex-direction: row;
     align-items: center;
-    justify-content: space-between;
+    justify-content: space-evenly;
+    flex-wrap: wrap;
+    gap: 1rem;
 }
 
 .button-box__button {
