--- a/src/app/home/components/card/card.component.scss
+++ b/src/app/home/components/card/card.component.scss
@@ -1,48 +1,44 @@
 :host {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    flex-wrap: wrap;
-    gap: 1rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+  gap: 1rem;
 }
 
 .main-content__card {
-    margin-top: 1rem;
-    width: 80%;
-    height: 400px;
-    max-width: 300px;
-    background: var(--card-background);
-    border-radius: 10px;
-    box-shadow: var(--card-box-shadow);
-    overflow: hidden;
+  margin-top: 1rem;
+  width: 80%;
+  height: 400px;
+  max-width: 300px;
+  background: var(--card-background);
+  border-radius: 10px;
+  box-shadow: var(--card-box-shadow);
+  overflow: hidden;
 
-    .card__img {
-        min-width: 100%;
-        max-width: 100%;
-    }
-    
-    .card__title {
-        font-size: 1.5rem;
-        padding-left: 2rem;
-        color: var(--font-color);
-    }
+  .card__img {
+    min-width: 100%;
+    max-width: 100%;
+  }
 
-    .card__info-list {
-        list-style: none;
-        padding-left: 2rem;
-        margin-bottom: 3rem;
-        color: var(--font-color);
-        
-        .info-list__item {
-            font-size: 1.2rem;
-        }
-    
-        .item__title {
-            font-weight: bold;
-        }
+  .card__title {
+    font-size: 1.5rem;
+    padding-left: 2rem;
+    color: var(--font-color);
+  }
+
+  .card__info-list {
+    list-style: none;
+    padding-left: 2rem;
+    margin-bottom: 3rem;
+    color: var(--font-color);
+
+    .info-list__item {
+      font-size: 1.2rem;
     }
 
+    .item__title {
+      font-weight: bold;
+    }
+  }
 }
-
-
-
