--- a/src/app/home/pages/country-detail/country-detail.component.html
+++ b/src/app/home/pages/country-detail/country-detail.component.html
@@ -1,28 +1,73 @@
+<div class="back-button">
+  <app-button
+    labelButton="Back"
+    icon="fa-solid fa-arrow-left"
+    [classButton]="['action-button', 'medium-button']"
+    [showIcon]="true"
+    (click)="backTo()"
+  ></app-button>
+</div>
 <div *ngIf="countryDetail" class="main">
-    <section class="flag">
-        <img class="flag__img" [src]="countryDetail.flag" [alt]="countryDetail.name">
+  <section class="flag">
+    <img
+      class="flag__img"
+      [src]="countryDetail.flag"
+      [alt]="countryDetail.name"
+    />
+  </section>
+  <section class="detail">
+    <h2 class="detail__title">{{ countryDetail.name }}</h2>
+    <section class="detail__info">
+      <ul class="info__list">
+        <li class="list__item">
+          <span class="item__title">Native Name:</span>
+          {{ countryDetail.nativeName }}
+        </li>
+        <li class="list__item">
+          <span class="item__title">Population:</span>
+          {{ countryDetail.population | number }}
+        </li>
+        <li class="list__item">
+          <span class="item__title">Region:</span> {{ countryDetail.region }}
+        </li>
+        <li class="list__item">
+          <span class="item__title">Sub Region:</span>
+          {{ countryDetail.subregion }}
+        </li>
+        <li class="list__item">
+          <span class="item__title">Capital:</span> {{ countryDetail.capital }}
+        </li>
+      </ul>
+      <ul class="info__list">
+        <li class="list__item">
+          <span class="item__title">Top Level Domain:</span>
+          {{ countryDetail.topLevelDomain }}
+        </li>
+        <li class="list__item">
+          <span class="item__title">Currencies: </span
+          ><span *ngFor="let currency of countryDetail.currencies">{{
+            currency.name
+          }}</span>
+        </li>
+        <li class="list__item">
+          <span class="item__title">Languages: </span
+          ><span
+            *ngFor="let language of countryDetail.languages"
+            class="item__element"
+            >{{ language.name }}</span
+          >
+        </li>
+      </ul>
     </section>
-    <section class="detail">
-        <h2 class="detail__title">{{countryDetail.name}}</h2>
-        <section class="detail__info">
-            <ul class="info__list">
-                <li class="list__item"><span class="item__title">Native Name:</span> {{ countryDetail.nativeName }}</li>
-                <li class="list__item"><span class="item__title">Population:</span> {{ countryDetail.population | number }}</li>
-                <li class="list__item"><span class="item__title">Region:</span> {{ countryDetail.region }}</li>
-                <li class="list__item"><span class="item__title">Sub Region:</span> {{ countryDetail.subregion }}</li>
-                <li class="list__item"><span class="item__title">Capital:</span> {{ countryDetail.capital }}</li>
-            </ul>
-            <ul class="info__list">
-                <li class="list__item"><span class="item__title">Top Level Domain:</span> {{ countryDetail.topLevelDomain }}</li>
-                <li class="list__item"><span class="item__title">Currencies: </span><span *ngFor="let currency of countryDetail.currencies" >{{ currency.name }}</span></li>
-                <li class="list__item"><span class="item__title">Languages: </span><span *ngFor="let language of countryDetail.languages" class="item__element">{{ language.name }}</span></li>
-            </ul>
-        </section>
-        <section class="detail__border-countries">
-            <h3 class="border-countries__title">Border countries:</h3>
-            <div class="border-countries__button-box">
-                <button *ngFor="let border of countryDetail.bordersBtn" class="button-box__button" (click)="onClickBorderButton(border)">{{ border.name }}</button>
-            </div>
-        </section>
+    <section class="detail__border-countries">
+      <h3 class="border-countries__title">Border countries:</h3>
+      <div class="border-countries__button-box">
+        <app-button
+          *ngFor="let border of countryDetail.bordersBtn"
+          [labelButton]="border.name"
+          (click)="onClickBorderButton(border)"
+        ></app-button>
+      </div>
     </section>
+  </section>
 </div>
